--- a/src/app/ai-assistant/ai-assistant.component.html
+++ b/src/app/ai-assistant/ai-assistant.component.html
@@ -1,5 +1,5 @@
 <main class="p-4 md:p-0 md:w-[800px] lg:w-[1200px] m-auto md:my-6">
-  <div class="flex flex-col h-[800px] space-y-4">
+  <div class="flex flex-col h-[800px] space-y-6 py-6">
     <!-- Header -->
     <div class="flex justify-center items-center space-x-4">
       <i
@@ -10,8 +10,8 @@
         MeanCommerce AI Assistant
       </h1>
     </div>
-    chatttgtingg
-    <section id="chat" class="space-y-4">
+
+    <section id="chat" class="space-y-4 pt-10">
       <div *ngFor="let chat of conversation">
         <div
           class=""
@@ -21,12 +21,10 @@
           }"
         >
           <p
-            class="p-4"
+            class="p-4 rounded-xl shadow-sm max-w-lg"
             [ngClass]="{
-              'bg-gray-100 max-w-lg  rounded-lg text-sm text-gray-900 shadow':
-                chat.role == 'system',
-              'bg-[#242424] text-white  rounded-lg text-sm shadow':
-                chat.role == 'user'
+              'bg-gray-100   text-sm text-gray-900 ': chat.role == 'system',
+              'bg-[#242424] text-white   text-sm ': chat.role == 'user'
             }"
           >
             {{ chat.message }}
@@ -36,32 +34,12 @@
     </section>
 
     <!-- Chat History -->
-    <div id="chat-history" class="flex-1 p-4 overflow-y-auto space-y-4">
-      <!-- AI Message -->
-      <div class="flex">
-        <div
-          class="max-w-2xl bg-gray-100 p-4 rounded-lg text-sm text-gray-900 shadow"
-        >
-          Hi, I'm your assistant. I can help you with your tech queries or
-          suggest you on which product is better suited for you.
-        </div>
-      </div>
-
-      <!-- User Message -->
-      <div class="flex justify-end">
-        <div
-          class="max-w-2xl bg-[#242424] text-white p-4 rounded-lg text-sm shadow"
-        >
-          Can you suggest a laptop for gaming?
-        </div>
-      </div>
-    </div>
 
     <!-- Input Area -->
-    <div class="bg-gray-100 relative">
+    <div class="relative">
       <textarea
         [(ngModel)]="user_query"
-        class="p-4 shadow-lg w-full rounded-lg h-[150px] focus:border-ciliconorange focus:outline-none"
+        class="p-4 shadow-xl w-full rounded-lg h-[150px] focus:border-ciliconorange focus:outline-none bg-gray-50"
         placeholder="Message Assitant"
       ></textarea>
       <div
