--- a/src/app/header/bottom-nav/bottom-nav.component.html
+++ b/src/app/header/bottom-nav/bottom-nav.component.html
@@ -28,9 +28,13 @@
     <i class="pi pi-microchip-ai" style="font-size: 20px"></i>
     <p>AI Assistant</p>
   </div>
-  <div class="flex text-gray-600 space-x-2 items-center cursor-not-allowed">
-    <i class="pi pi-map-marker" style="font-size: 20px"></i>
-    <p>Track Order</p>
+  <div
+    routerLink="compare"
+    routerLinkActive="active"
+    class="flex text-gray-600 space-x-2 items-center"
+  >
+    <i class="pi pi-sync" style="font-size: 20px"></i>
+    <p>Compare</p>
   </div>
   <div class="flex text-gray-600 space-x-2 items-center cursor-not-allowed">
     <i class="pi pi-headphones" style="font-size: 20px"></i>
