--- a/src/app/compare/compare.component.html
+++ b/src/app/compare/compare.component.html
@@ -1,5 +1,8 @@
 <main class="p-4 md:p-0 md:w-[800px] lg:w-[1200px] m-auto md:my-6">
-  <table class="table-fixed flex">
+  <table
+    *ngIf="compare_items.length > 0; else no_items_to_compare"
+    class="table-fixed flex"
+  >
     <thead>
       <tr class="flex flex-col">
         <th class="min-w-[280px] h-[530px] border"></th>
@@ -41,16 +44,16 @@
       </tr>
     </thead>
     <tbody class="flex">
-      <tr class="flex flex-col">
+      <tr *ngFor="let item of compare_items" class="flex flex-col">
         <td class="w-[300px] h-[530px] p-8 space-y-4 border">
           <!-- product image with remove button -->
-          <div>
+          <div class="space-y-4">
             <div class="flex justify-center">
               <i class="pi pi-times-circle text-gray-500"></i>
             </div>
             <div>
               <img
-                src="../../assets/images/keyboard.svg"
+                ngSrc="{{ item.images[0] }}"
                 class="w-[272px] h-[272px] object-contain"
                 width="272"
                 height="272"
@@ -59,8 +62,8 @@
           </div>
 
           <!-- title product -->
-          <p class="text-[16px] font-medium text-left">
-            Gamdias ARES M2 Gaming Keyboard, Mouse and Mouse Mat Combo
+          <p class="text-[16px] font-medium text-left line-clamp-2">
+            {{ item.name }}
           </p>
 
           <!-- add to cart section -->
@@ -94,34 +97,61 @@
         <td
           class="py-[12px] h-[52px] text-ciliconPriceBlue font-semibold px-[32px] border odd:bg-gray-100 even:bg-white text-lg"
         >
-          $1000
+          ${{ item.price }}
         </td>
         <td
           class="py-[12px] px-[32px] border odd:bg-gray-100 even:bg-white text-sm"
         >
-          Apple
+          {{ item.brand }}
         </td>
         <td
           class="py-[12px] px-[32px] border odd:bg-gray-100 even:bg-white text-sm"
         >
-          Accessories
+          {{ item.category }}
         </td>
         <td
           class="py-[12px] px-[32px] border odd:bg-gray-100 even:bg-white text-sm"
         >
-          5000
+          {{ item.stock }}
         </td>
         <td
           class="py-[12px] px-[32px] border odd:bg-gray-100 even:bg-white text-sm"
         >
-          lskdfjldsjf5s5d54f
+          {{ item.sku }}
         </td>
         <td
           class="py-[12px] px-[32px] border odd:bg-gray-100 even:bg-white text-sm"
         >
-          2021
+          {{ item.createdAt | date }}
         </td>
       </tr>
     </tbody>
   </table>
 </main>
+
+<ng-template #no_items_to_compare>
+  <div
+    class="flex flex-col justify-center items-center h-[70vh] text-gray-500 space-y-6 max-w-[600px] m-auto"
+  >
+    <div class="flex space-x-4 items-center text-4xl">
+      <i class="pi pi-sort-alt-slash text-4xl"></i>
+      <p>No Items to compare</p>
+    </div>
+    <p>Please add items to compare inorder to start comparing items.</p>
+    <p class="text-center">
+      MeanCommerce AI Assistant will also be available for you to assist on
+      finding the right products that suits your budget or help you with any
+      queries regarding the products.
+    </p>
+    <div class="space-y-2 flex flex-col items-center pt-10">
+      <img
+        ngSrc="../../assets/icons/openai-svgrepo-com.svg"
+        width="40"
+        height="40"
+        class="opacity-55"
+      />
+      <p>Powered By Open AI</p>
+    </div>
+  </div>
+  <p></p>
+</ng-template>
