changes to fix ai - added cursor pointer to compare button -change the api url to prod url

--- a/src/app/header/bottom-nav/bottom-nav.component.html
+++ b/src/app/header/bottom-nav/bottom-nav.component.html
@@ -24,7 +24,7 @@
   <div
     routerLink="compare"
     routerLinkActive="active"
-    class="flex text-gray-600 space-x-2 items-center"
+    class="flex text-gray-600 space-x-2 items-center cursor-pointer"
   >
     <i class="pi pi-sync" style="font-size: 20px"></i>
     <p>Compare</p>
