--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -138,7 +138,7 @@
             </div>
             <div
               (click)="addToCompare(product)"
-              class="flex items-center space-x-1 text-sm text-gray-500"
+              class="flex cursor-pointer items-center space-x-1 text-sm text-gray-500"
             >
               <mat-icon fontSet="material-symbols-outlined">autorenew</mat-icon>
               <p>Add to Compare</p>
