major changes -removed buy now button - order detail frontend is complete need to work on backend - fix quick view with add to compare

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
     <!-- <app-side-panel> </app-side-panel> -->
 
     <app-side-menu class="w-[200px] hidden lg:flex"></app-side-menu>
-    <div class="lg:w-[984px] w-full">
+    <div class="lg:w-[984px] w-full h-[100vh] overflow-y-scroll scrollbar-hide">
       <router-outlet></router-outlet>
     </div>
   </div>
