--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -103,16 +103,11 @@
           </div> -->
           <div
             (click)="addToCart(product)"
-            class="bg-ciliconorange w-full flex text-white items-center justify-center p-2 uppercase space-x-3 font-semibold"
+            class="bg-ciliconorange cursor-pointer w-full flex text-white items-center justify-center p-2 uppercase space-x-3 font-semibold"
           >
             <span>Add to cart</span>
             <img src="../../../assets/icons/cart.svg" class="w-6" />
           </div>
-          <button
-            class="p-2 w-full border-ciliconorange text-ciliconorange uppercase border"
-          >
-            buy now
-          </button>
         </div>
         <!-- add to wishlist -->
         <div class="md:flex justify-between w-full space-y-2 md:space-y-0">
@@ -183,3 +178,4 @@
 <ng-template #loading>
   <app-product-detail-loading></app-product-detail-loading
 ></ng-template>
+<p-toast />
