--- a/src/app/dashboard/feature/order-history/order-history.component.html
+++ b/src/app/dashboard/feature/order-history/order-history.component.html
@@ -32,8 +32,13 @@
           </td>
           <td class="p-4">${{ item.total_amount / 100 }}</td>
           <td class="text-[#2DA5F3] flex items-center space-x-2 p-4">
-            <a href="{{ item.receipt_url }}" target="_blank">print receipt</a
-            ><i class="pi pi-arrow-right"></i>
+            <div
+              routerLink="/dashboard/order-detail/{{ item._id }}"
+              routerLinkActive="router-link-active"
+            >
+              <p>View Details</p>
+              <span><i class="pi pi-arrow-right text-sm"></i></span>
+            </div>
           </td>
         </tr>
       </tbody>
@@ -69,8 +74,13 @@
           </td>
           <td class="p-2 text-sm">${{ item.total_amount / 100 }}</td>
           <td class="p-2 text-sm flex space-x-2">
-            <a href="{{ item.receipt_url }}" target="_blank">Print Receipt</a
-            ><span><i class="pi pi-arrow-right text-sm"></i></span>
+            <div
+              routerLink="/order-detail/{{ item._id }}"
+              routerLinkActive="router-link-active"
+            >
+              <p>View Details</p>
+              <span><i class="pi pi-arrow-right text-sm"></i></span>
+            </div>
           </td>
         </tr>
       </tbody>
