--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
 <div
-  class="p-4 md:p-0 md:w-[800px] lg:w-[1200px] m-auto md:pt-[40px] md:pb-[72px] min-h-[100vh]"
+  class="p-4 md:p-0 md:w-[800px] lg:w-[1200px] m-auto md:pt-[40px] md:pb-[72px]"
 >
   <div class="flex justify-between">
     <app-side-menu class="w-[200px] hidden lg:flex"></app-side-menu>
-    <div class="lg:w-[984px] w-full h-[100vh] overflow-y-scroll scrollbar-hide">
+    <div class="lg:w-[984px] w-full overflow-y-scroll scrollbar-hide">
       <router-outlet></router-outlet>
     </div>
   </div>
