--- a/src/app/dashboard/feature/order-detail/order-detail.component.html
+++ b/src/app/dashboard/feature/order-detail/order-detail.component.html
@@ -151,7 +151,9 @@
 
   <!-- customer details -->
   <div class="flex space-x-2">
-    <div class="w-1/2 border p-6 rounded-lg space-y-2">
+    <div
+      class="w-1/2 border p-6 rounded-lg space-y-2 overflow-x-scroll scrollbar-hide text-xs md:text-md"
+    >
       <p class="font-semibold text-lg">Customer</p>
       <div class="flex items-center space-x-2">
         <i class="pi pi-user"></i>
@@ -159,11 +161,13 @@
       </div>
       <div class="flex items-center space-x-2">
         <i class="pi pi-shopping-bag"></i>
-        <p>{{ order_details.customer_email }}</p>
+        <p class="">{{ order_details.customer_email }}</p>
       </div>
       <p class="text-sm">Customer is tax-exempt</p>
     </div>
-    <div class="w-1/2 border p-6 rounded-lg space-y-2">
+    <div
+      class="w-1/2 border p-6 rounded-lg space-y-2 overflow-x-scroll scrollbar-hide text-xs md:text-md"
+    >
       <p class="font-semibold text-lg">Notes</p>
       <textarea
         class="w-full outline-none"
@@ -174,7 +178,9 @@
 
   <!-- contact -->
   <div class="flex space-x-2">
-    <div class="w-1/2 border p-6 rounded-lg space-y-2">
+    <div
+      class="w-1/2 border p-6 rounded-lg space-y-2 overflow-x-scroll scrollbar-hide text-xs md:text-md"
+    >
       <p class="font-semibold text-lg">Contact Information</p>
       <div class="flex items-center space-x-2">
         <i class="pi pi-envelope"></i>
@@ -183,7 +189,9 @@
 
       <p class="text-sm">No phone number</p>
     </div>
-    <div class="w-1/2 border p-6 rounded-lg space-y-2">
+    <div
+      class="w-1/2 border p-6 rounded-lg space-y-2 overflow-x-scroll scrollbar-hide text-xs md:text-md"
+    >
       <p class="font-semibold text-lg">Shipping Address</p>
       <div class="flex items-center space-x-2">
         <i class="pi pi-envelope"></i>
@@ -202,12 +210,16 @@
 
   <!-- billing address -->
   <div class="flex space-x-2">
-    <div class="w-1/2 border p-6 rounded-lg space-y-2">
+    <div
+      class="w-1/2 border p-6 rounded-lg space-y-2 overflow-x-scroll scrollbar-hide text-xs md:text-md"
+    >
       <p class="font-semibold text-lg">Billing Address</p>
 
       <p class="text-sm">Same as shipping address</p>
     </div>
-    <div class="w-1/2 border p-6 rounded-lg space-y-2">
+    <div
+      class="w-1/2 border p-6 rounded-lg space-y-2 overflow-x-scroll scrollbar-hide text-xs md:text-md"
+    >
       <p class="font-semibold text-lg">Conversion Summary</p>
 
       <p class="text-sm">
