removed 100vh from home

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="relative">
   <app-header></app-header>
-  <div class="min-h-[100vh]">
+  <div class="">
     <router-outlet></router-outlet>
   </div>
   <app-footer></app-footer>
