view details for order cursor is changed and also removed the api-delay message

--- a/src/app/dashboard/feature/order-history/order-history.component.html
+++ b/src/app/dashboard/feature/order-history/order-history.component.html
@@ -36,7 +36,7 @@
               routerLink="/dashboard/order-detail/{{ item._id }}"
               routerLinkActive="router-link-active"
             >
-              <p>View Details</p>
+              <p class="cursor-pointer">View Details</p>
             </div>
           </td>
         </tr>
@@ -81,7 +81,7 @@
               routerLink="/dashboard/order-detail/{{ item._id }}"
               routerLinkActive="router-link-active"
             >
-              <p class="text-ciliconPriceBlue">View Details</p>
+              <p class="text-ciliconPriceBlue cursor-pointer">View Details</p>
             </div>
           </td>
         </tr>
